# nico

./: LICENSE  README.md
edisonLibmogiPackage/examples/: CMakeLists.txt
edisonLibmogiPackage/examples/androidAppInterface/: CMakeLists.txt
edisonLibmogiPackage/examples/androidAppInterface/src/: ApplicationCommunicator.cpp  ApplicationServer.cpp  HexapodPayload.cpp  androidAppInterface.cpp
edisonLibmogiPackage/examples/appInterfaceDemo/: CMakeLists.txt  JSONmsgs.txt
edisonLibmogiPackage/examples/appInterfaceDemo/src/: appInterfaceDemo.cpp
edisonLibmogiPackage/examples/dance/: CMakeLists.txt
edisonLibmogiPackage/examples/dance/src/: CursesHandler.cpp  CursesHandler.h  Dancing.cpp  Lighting.cpp  Lighting.h  SimpleReceive.cpp  dance.cpp  dance2.cpp  danceDmitriCurses.cpp  danceNico.cpp  danceNicoCurses.cpp  danceNicoOsc.cpp  danceParameters.cpp  danceParameters.h  danceState.cpp  danceState.h
edisonLibmogiPackage/examples/dynamixel_examples/: CMakeLists.txt
edisonLibmogiPackage/examples/dynamixel_examples/src/: dynamixel_examples.cpp
edisonLibmogiPackage/examples/head_test/: CMakeLists.txt
edisonLibmogiPackage/examples/head_test/src/: head_test.cpp
edisonLibmogiPackage/examples/openGL/: CMakeLists.txt  README.txt
edisonLibmogiPackage/examples/openGL/Objects/: lightModel.dae  paverStones.mtl  testCube.ply  tyke.dae
edisonLibmogiPackage/examples/openGL/Objects/arm/: segment1.STL  segment2.STL  (+2 more)
edisonLibmogiPackage/examples/openGL/STL/: Femur_rx28_opengl.STL  Tibia_aluminum_opengl.STL  camera_opengl.STL  coxa_bracket_MX_28_opengl.STL  fit_pc2_opengl.STL  lightSource.STL  rx28_rough_opengl.STL  test.STL  tilt camera bracket better opengl.STL
edisonLibmogiPackage/examples/openGL/Shaders/: shadowShader.fsh  shadowShader.vsh
edisonLibmogiPackage/examples/openGL/shaderTesting/: CMakeLists.txt  bump.cpp  camera.cpp  camera.h  fragment.frag  vertex.vs
edisonLibmogiPackage/examples/openGL/src/: Arm6DOF.cpp  Arm6DOF.h  arm.cpp  calibration.h  common.cpp  common.h  hexapodGL.cpp  simple.cpp
edisonLibmogiPackage/examples/simple_footControl/: CMakeLists.txt
edisonLibmogiPackage/examples/simple_footControl/src/: simple_footControl.cpp
edisonLibmogiPackage/examples/simple_walk/: CMakeLists.txt
edisonLibmogiPackage/examples/simple_walk/src/: simple_walk.cpp
edisonLibmogiPackage/examples/welcome/: CMakeLists.txt
edisonLibmogiPackage/examples/welcome/src/: welcome.cpp
edisonLibmogiPackage/libmogi/: AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  README.txt  TODO  doxygen.conf
edisonLibmogiPackage/libmogi/cmake/Modules/: FindGlew.cmake  FindLibAssimp.cmake  FindLibFtdi.cmake  FindLibJsoncpp.cmake  FindLibMBsimulation.cmake  FindLibMogi.cmake  FindLibOptitrack.cmake  FindLibPortmidi.cmake  FindLibSdl.cmake  FindLibSdl2.cmake  FindOpenGLES.cmake  MogiLibrary.cmake
edisonLibmogiPackage/libmogi/doc/: doxygen.md
edisonLibmogiPackage/libmogi/doc/UML/: MBhexapod.mdj
edisonLibmogiPackage/libmogi/doc/images/: dmitri.tiff
edisonLibmogiPackage/libmogi/include/: mogi.h  mogi_version_i.h.in
edisonLibmogiPackage/libmogi/include/mogi/: Logger.h  StringBuffer.h  thread.h
edisonLibmogiPackage/libmogi/install/: CMakeLists.txt  dynamixel.cpp  mogi-version.cpp
edisonLibmogiPackage/libmogi/port/android/: README.txt  assets_readme.txt  build.sh
edisonLibmogiPackage/libmogi/port/ios/: README.txt  build.sh  iOS.cmake  jsonWrapper.h  jsonWrapper.mm  jsonWrapperIOS.h  resourceInterface.h  resourceObject.h  resourceObject.mm
edisonLibmogiPackage/libmogi/resources/configurations/: anouk.json  anoukCabled.json  danceAnouk.json  danceAnoukCabled.json  danceDmitri.json  danceNico.json  dmitri.json  dmitriFly.json  legTest.json  legTestYYX.json  nico.json
edisonLibmogiPackage/libmogi/simulation/: CMakeLists.txt
edisonLibmogiPackage/libmogi/simulation/src/: Animation.cpp  BokehShader.cpp  BokehShaderParameters.cpp  Bone.cpp  Camera.cpp  Channel.cpp  DeferredLightingShaderParameters.cpp  DynamicShader.cpp  Event.cpp  FinalProcessShaderParameters.cpp  FrameBuffer.cpp  Function.cpp  GeometryShaderParameters.cpp  Image.cpp  Importer.cpp  InputDevice.cpp  Key.cpp  Light.cpp  Material.cpp  Mesh.cpp  MogiGLInfo.cpp  Ports.cpp  Postprocess.cpp  Scene.cpp  Shader.cpp  ShaderFactory.cpp  ShadowMapShaderParameters.cpp  ShadowShader.cpp  ShadowShaderParameters.cpp  StaticShader.cpp  Texture.cpp  Value.cpp
edisonLibmogiPackage/libmogi/simulation/tests/: testMBscene.cpp  testSDL.cpp
edisonLibmogiPackage/libmogi/src/: version.cpp
edisonLibmogiPackage/libmogi/src/App/: AppComm.cpp  AppInterface.cpp  JsonSubject.cpp  JsonValueInterface.cpp  JsonValueObserver.cpp
edisonLibmogiPackage/libmogi/src/Dynamixel/: Com.cpp  Dynamixel.cpp  Ftdi.cpp  Handler.cpp  Interface.cpp  MotorCalibration.cpp  Packet.cpp  Thread.cpp
edisonLibmogiPackage/libmogi/src/Math/: Bezier.cpp  Gain.cpp  GrahamScan.cpp  Kinematics.cpp  LUD.cpp  LowPassFilter.cpp  Matrix.cpp  MotionControl.cpp  Node.cpp  Other.cpp  Quaternion.cpp  Random.cpp  Time.cpp  Vector.cpp
edisonLibmogiPackage/libmogi/src/Network/: ClientMulticastReceiver.cpp  ConnectedSocket.cpp  Connection.cpp  DataSerializer.cpp  Packet.cpp  ServerMulticast.cpp  SocketAddress.cpp  SocketDescriptor.cpp  TCPServerSocket.cpp  TCPSocket.cpp  UDPSocket.cpp
edisonLibmogiPackage/libmogi/src/Robot/: Bot.cpp  DmitriHeadMechanism.cpp  DynamicGait.cpp  Hexapod.cpp  HexapodLeg.cpp  HexapodLeg3DOF.cpp  HexapodLegYYX.cpp  HexapodLegZYY.cpp  Joint.cpp  Prismatic.cpp  Revolute.cpp  RigidGait.cpp  WalkingDynamics.cpp
edisonLibmogiPackage/libmogi/src/StateChart/: Diagram.cpp  Event.cpp  Guard.cpp  State.cpp  Transition.cpp
edisonLibmogiPackage/libmogi/tests/: CMakeLists.txt  dynamixelTests.cpp  testDynamixelHandler.cpp  testDynamixelPackets.cpp  testMBjson.cpp  testMBkinematics.cpp  testMBlowPassFilter.cpp  testMBmotionControl.cpp  testMBmotorCalibration.cpp  testMBnodes.cpp  testMBrandom.cpp  testMBthread.cpp  testMath.cpp  testMathBezier.cpp  testMisc.cpp  testPseudoInverse.cpp  testRobotHexapod.cpp  testRobotHexapodLeg.cpp  testStateChart.cpp  testUDPSocket.cpp
(+158 files in other folders)
